jEdit 5.2 version history
       (changes since jEdit 5.1.0)
:encoding=UTF-8:

{{{ Version 5.2pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Dale Anson,
Thomas Meyer, Patrick Eibl, László Schmidt, Zsombor Franczia, Bence Pintér
Makarius, Alan Ezust and Eric Le Lay for contributing to this release.

{{{ Bug Fixes

- Support for shortcuts to "copy" the error in Error widget (Matthieu Casanova)

- Fixed the systray not added on EDT thread (Matthieu Casanova)

- Fix the integration with Unity and other Linux Desktop Environments,
  broken by Patch #3582760. (Björn "Vampire" Kautler)

- Reload optionally dependent plugins when a plugin is unloaded.
  (#3614456 - Dale Anson)

- Fix #3614883: Alt+'f' multiply bound in "Search and Replace" dialog

- Applied patch #3615045 (Makarius), plus some additional cleanup of setting the 
  look and feel (Dale Anson)

- Fixed a bug in pluginmanager: transitive deps not installed when filtering
  (#3614985 - Eric Le Lay)
}}}
{{{ API Changes

- GUIUtilities.getShortcutLabel() has a second boolean argument to specify
  whether platform modifier symbols are desired or not. (#3615046 Makarius) 

- jEdit now depends on Java 1.7

- Removed deprecated (ambiguous) overloads of IOUtilities.closeQuietly().

- New status "REMOVED" added to PluginUpdate message.

}}}
{{{ UI improvements

- Added "loading" icon for task status bar widget (request #3615068 -
  Matthieu Casanova)

- The TextArea will not scroll anymore when dragging files on jEdit
  (Matthieu Casanova)

- EnhancedDialog instances (Search/Replace, Options, Open) now can be closed
  using a single-key close-buffer.shortcut. (#3613007, #3588892 - László Schmidt,
  Zsombor Franczia, Bence Pintér)

- Plugin dependencies are shown in the plugin manager details pane for all three
  tabs. (#3614465 - Dale Anson)

- Increased the scrolling speed in option pane (Matthieu Casanova)

- In plugin manager's install panel plugin dependencies are unchecked